Update 3: light mode + color fix + channels scrollbar fix
small update fixing bugs

--- a/static/main.css
+++ b/static/main.css
@@ -1,38 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
-html, body {
+.dark-theme {
+    --background-color: #202225;
+
     --sidebar_color: #202225;
-    --channel-color: #2f3136;
-    --content-color: #36393f;
-    --profile-color: #292b2f;
+    --channels-color: #2e3136;
+    --content-color: #36393e;
+    --profile-color: #282b2f;
 
     --channels-text-color: #8e9297;
+
+    --scrollbar-thumb: #202225;
+}
+.light-theme {
+    --background-color: #fff;
+
+    --sidebar-color: #e2e5e8;
+    --channels-color: #f2f3f5;
+    --content-color: #fff;
+    --profile-color: #eaedef;
+
+    --channels-text-color: #6a7480;
+
+    --scrollbar-thumb: #4f545c;
+}
+
+html, body {
     --channels-size: 240px;
 
     min-height: 100% !important;
     height: 100%;
+    background-color: var(--background-color);
 }
 
-/*https://gist.github.com/LaksCastro/abda0ba3e607927bc21d2f7112aa175f*/
-    ::-webkit-scrollbar {
-        width: 10px;
-        background-color: transparent;
-    }
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
 
-    ::-webkit-scrollbar-button {
-        display: none;
-        width: 0;
-        height: 0;
-    }
+.channels::-webkit-scrollbar-button {
+    display: none;
+    width: 0;
+    height: 0;
+}
 
-    ::-webkit-scrollbar-corner {
-        background-color: transparent;
-    }
+::-webkit-scrollbar-track {
+    border-color: transparent;
+    background-color: transparent;
+    border: 2px solid transparent;
+}
 
-    ::-webkit-scrollbar-thumb {
-        background-color: #4a4d52;
-        border: 2px solid #282a2d;
-        border-radius: 10px;
-    }
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-clip: padding-box;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    background-color: var(--scrollbar-thumb);
+    min-height: 40px;
+}
 /**/
 
 body {
@@ -52,10 +79,7 @@ body {
     /*grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));*/
 }
 
-.top {
-    z-index: 2;
-    box-shadow: 0 2px 4px var(--sidebar_color);
-}
+
 .grid-item {
     display: flex;
     flex-direction: column;
@@ -71,17 +95,17 @@ body {
     background-color: var(--sidebar_color);
 }
 .channels {
-    background-color: var(--channel-color);
+    background-color: var(--channels-color);
 }
 .channels:not(.top) {
-    overflow: scroll;
-    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: scroll;
     padding-right: 12px;
     color: var(--channels-text-color);
 
 }
 .content {
     background-color: var(--content-color);
+    overflow-y: scroll;
 }
 .profile {
     overflow: hidden;
@@ -121,3 +145,9 @@ body {
     box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
     transform: translateY(-3px) scale(1.1);
  }
+
+ .top {
+    z-index: 2;
+    box-shadow: 0 2px 4px var(--sidebar_color);
+    overflow: hidden;
+}
